--- a/content/holiday_letter/2018.md
+++ b/content/holiday_letter/2018.md
@@ -8,9 +8,18 @@ Hi all, and happy holidays.
 
 After enjoying my Uncle Doug's yearly holiday letter, and seeing my friends and family get more spread out, I thought I'd give this a try. 
 
+If you just want to read the light and fluffy version of this note, skip over this next part. 
 ____
 
-This has been a hard year for me. 
+This has been a relatively tough year for me.
+
+I'd call it a year of dealing with some deep-seated problems that I've suppressed for a while. Generally I've done my best to try to give myself space and time to figure out what is wrong, how to manage it, and how to continue on well. Think depression, bad habits, poor work ethic, and a few other symptoms. 
+
+One key component is that I've tried to not 'push' with much beyond trying to be better. This meant temporarily abandoning most of my goals and plans heading into this year. I've had some uncomfortable conversations like: "Oh what about X that you had been spoke about before? Whatever happened to that?" I appreciate that they remembered what I had told them, but it wasn't fun to admit that was still just talk.
+
+My experience last year up until april was that I filled myself up to capacity, failed at something causing it to all collapse, re-assessed my abilities, filled myself up to the new lower capacity, failed again, etc. This cycle repeated itself until I felt like I could do nothing at all. 
+
+I'm happy to report that I'm starting to get a firm handle on it all, and my plans for the future are opening up again. Soon I'll be able to take what I've just been talking about and put it into action.
 
 (expectations and plans)
 
@@ -18,6 +27,9 @@ Last year I was finishing up my fourth and final coop term at a fintech company 
 
 
 (the hit of the malaise) (from old things bubbling up, after scraping by in a few semesters prior) (change of place and pace are good distractions, but they fix little. This year I've avoided pushing on any dreams, just trying to be myself, be happy, and get motivated again.)
+
+____
+
 
 (Generally prioritise people photos over nature)
 
