--- a/content/holiday_letter/2018.md
+++ b/content/holiday_letter/2018.md
@@ -1,49 +1,80 @@
 ---
-title: "2018th"
+title: "Christmas Letter 2018: Talking"
 date: 2018-12-01T17:18:36-08:00
 draft: true
 ---
 
-Hi all, and happy holidays.
+Hi all, and happy holidays!
 
 After enjoying my Uncle Doug's yearly holiday letter, and seeing my friends and family get more spread out, I thought I'd give this a try. 
-
-If you just want to read the light and fluffy version of this note, skip over this next part. 
 ____
 
 This has been a relatively tough year for me.
 
-I'd call it a year of dealing with some deep-seated problems that I've suppressed for a while. Generally I've done my best to try to give myself space and time to figure out what is wrong, how to manage it, and how to continue on well. Think depression, bad habits, poor work ethic, and a few other symptoms. 
+For those of you who have seen the show, I felt a bit like BoJack Horseman: desponedent, depressed, self-destructive, and building bad habits. I realised I had a minor problem last November, but dragged my feet on doing anything until March/April-ish of this year.
 
-One key component is that I've tried to not 'push' with much beyond trying to be better. This meant temporarily abandoning most of my goals and plans heading into this year. I've had some uncomfortable conversations like: "Oh what about X that you had been spoke about before? Whatever happened to that?" I appreciate that they remembered what I had told them, but it wasn't fun to admit that was still just talk.
+Since then I've done my best to try to give myself space and time to figure out what is wrong, how to manage it, and how to continue on smoothly; how to be better. 
 
-My experience last year up until april was that I filled myself up to capacity, failed at something causing it to all collapse, re-assessed my abilities, filled myself up to the new lower capacity, failed again, etc. This cycle repeated itself until I felt like I could do nothing at all. 
+One key component is that I've tried to not 'push' on anything. This meant temporarily abandoning most of my goals and plans heading into this year. I've had some uncomfortable conversations where I was forced to acknowledge that my aims were still just talk.
 
-I'm happy to report that I'm starting to get a firm handle on it all, and my plans for the future are opening up again. Soon I'll be able to take what I've just been talking about and put it into action.
+Two things have really helped: I started going to see a pair of lovely trainers at a gym four times a week, and started to chat to a good counsellor. Working out consistently has been fabulous aid, for it has made me feel the strongest I ever have, and forced me to do basic human things. Plus downsizing my pants by three waist sizes felt great!
 
-(expectations and plans)
+I'm happy to report that I'm starting to get a firmer handle on it all, and my plans for the future are opening up again. Soon I'll be able to take what I've just been talking about and put it into action. 
 
-Last year I was finishing up my fourth and final coop term at a fintech company here in Vancouver, after going backpacking in Asia for a few months. I had planned a triumphant return to school in January for my final semester; a true victory lap if you will. 
+A huge thank you goes to my parents for supporting me through all of this. I would not be able to do any of this without them providing the opportunity to have time and space to work through things.
+
+___
+
+So where was I last year?
+
+I was finishing up my fourth and final coop term at a fintech company here in Vancouver, after going backpacking in Asia for a few months. I had one term left for school with an expected graduation in May with many of my good friends.
+
+{{< figure src="/images/xmas/2018/asia0.jpg" alt="bike/japan" class="image" >}}
+{{< figure src="/images/xmas/2018/asia1.jpg" alt="diving" class="image" >}}
+
+Over spring break, as a getaway from school, I had the opportunity to go visit Jeff and Sue in New York! I spent the entire time chatting with friends over drinks, brunching away, or drinking afternoon tea in a speakeasy. I still don't know what Times Square is like , or been to the Statue of Liberty, but I felt my time was well spent. I felt strangely out of place with my shaggy hair and west coast casual dress. It got to me so much I even got a haircut four days in.
+
+{{< figure src="/images/xmas/2018/ny.jpg" alt="" class="image" >}}
+
+I was stupidly overconfident and didn't both to check my credits for graduation and managed to miss the mark by two credits. To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (super chill and interesting). If I could recommend one film, it would be [Tampopo](https://imdb.com). An exercise I enjoyed was coming up with alternate taglines for the films. For Tampopo, it was Rocky for Ramen. Its also been called a Ramen Western.
+
+In may, as an after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather, and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
+
+{{< figure src="/images/xmas/2018/wct.jpg" alt="West Coast Trail hiking Group" class="image" >}}
+{{< figure src="/images/xmas/2018/wct.gif" alt="gif of Crystal falling in mud" class="gif" >}}
+
+Then newly employed Crystal decided to get a dog, and lovely Stella entered our lives!
+
+{{< figure src="/images/xmas/2018/stella_famjam.jpg" alt="Crystal, Stella, and my adoption photo" class="image" >}}
+
+The fur and dirty paw prints have been a bit to get used to, but she has without a doubt made my life better. She is a warm loving companion and wonderful to have around (especially if you keep feeding her hotdogs). She also is becoming quite the adventure dog, going on many hikes and trips, and recently ski adventures.
+
+{{< figure src="/images/xmas/2018/stella_hiking.jpg" alt="Stella high up on Tricouni" class="image" >}}
+
+If you haven't yet, I would highly suggest you follow her instagram [@gsdstells](https://instagram.com/gsdstells). Its run by Crystal, but I manaage to sneak on there occasionally.
 
 
-(the hit of the malaise) (from old things bubbling up, after scraping by in a few semesters prior) (change of place and pace are good distractions, but they fix little. This year I've avoided pushing on any dreams, just trying to be myself, be happy, and get motivated again.)
+
+This fall I also met a fabulous new person. While its too early to say much more, dating Viviana has been pretty fantastic, and I'm quite excited about where things are going. 
+
+{{< figure src="/images/xmas/2018/viv_hotsprings.jpg" alt="Viviana and I in the __ hotsprings near Invermere" class="image" >}}
+
+We ended up taking two wonderful road trips back to back: out to Tofino, and then across the face of the province to Jasper/Banff.
 
 ____
 
+Next year I plan to:
+
+* Finish my job search, ideally landing a remote Go/Ruby based backend software developer role.
+* Get my drysuit certification and dive in BC
+* Hike the North Coast Trail and/or the Bowron Lakes circuit (due to messing up my graduation, I had to cancel these last may)
+* Ski tour a lot more, and learn to better read slopes and snow. Frankly getting out and getting home safely will satisfy this for me. A winter overnight would also be a bonus.
+
+There are a vairety of smaller tech projects I'd like to do, people I'd like to visit, and places I'd like to go. However those come in their own time.
+
+____
 
 (Generally prioritise people photos over nature)
-
-Extra summer classes and adventures
-
-Highlights:
-
-Trip to NY to see Jeff & Sue
-
-Stella
-
-Counsellor
-
-Rep 1/Workout/Gym/Strength
 
 Tofino/Banff/Jasper
 
@@ -55,18 +86,14 @@ Dirtfish
 
 Hiking trips: selected photos
 
-grotto snapchat filter
-
 Grad photos
 
 Hammocking
 
-In the past few months I've started seeing someone new. While its too early to say much more, everything has been pretty fantastic, and I'm quite excited about the direction things are going. 
+In the past few months I've started seeing someone new. 
 
 ___
 
-Whatever your faith may be, happy holidays and best of luck in the new year.
-
-Love you all,
+Happy holidays and best of luck in the new year to all of you,
 
 Graham
