--- a/content/holiday_letter/2018.md
+++ b/content/holiday_letter/2018.md
@@ -38,6 +38,10 @@ Over spring break, as a getaway from school, I had the opportunity to go visit J
 
 I was stupidly overconfident and didn't both to check my credits for graduation and managed to miss the mark by two credits. To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (super chill and interesting). If I could recommend one film, it would be [Tampopo](https://imdb.com). An exercise I enjoyed was coming up with alternate taglines for the films. For Tampopo, it was Rocky for Ramen. Its also been called a Ramen Western.
 
+I managed to do most of my work on my laptop in a hammock beside the beach. I really could get used to that...
+
+{{< figure src="/images/xmas/2018/hammocking.jpg" alt="Hammocking at Jericho" class="image" >}}
+
 In may, as an after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather, and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
 
 {{< figure src="/images/xmas/2018/wct.jpg" alt="West Coast Trail hiking Group" class="image" >}}
@@ -53,6 +57,7 @@ The fur and dirty paw prints have been a bit to get used to, but she has without
 
 If you haven't yet, I would highly suggest you follow her instagram [@gsdstells](https://instagram.com/gsdstells). Its run by Crystal, but I manaage to sneak on there occasionally.
 
+Dirtfish
 
 
 This fall I also met a fabulous new person. While its too early to say much more, dating Viviana has been pretty fantastic, and I'm quite excited about where things are going. 
@@ -60,6 +65,16 @@ This fall I also met a fabulous new person. While its too early to say much more
 {{< figure src="/images/xmas/2018/viv_hotsprings.jpg" alt="Viviana and I in the __ hotsprings near Invermere" class="image" >}}
 
 We ended up taking two wonderful road trips back to back: out to Tofino, and then across the face of the province to Jasper/Banff.
+
+Tofino
+
+drive trees fall
+
+Breathtaking Jasper & nearly freezing to death to hot springing
+
+I even graduated for real! 
+
+{{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="image" >}}
 
 ____
 
@@ -73,26 +88,6 @@ Next year I plan to:
 There are a vairety of smaller tech projects I'd like to do, people I'd like to visit, and places I'd like to go. However those come in their own time.
 
 ____
-
-(Generally prioritise people photos over nature)
-
-Tofino/Banff/Jasper
-
-Tofino twice, couchsurfers, friends staying
-
-West Coast Trail
-
-Dirtfish
-
-Hiking trips: selected photos
-
-Grad photos
-
-Hammocking
-
-In the past few months I've started seeing someone new. 
-
-___
 
 Happy holidays and best of luck in the new year to all of you,
 
