--- a/content/holiday_letter/2018.md
+++ b/content/holiday_letter/2018.md
@@ -17,7 +17,7 @@ Since then I've done my best to try to give myself space and time to figure out 
 
 One key component is that I've tried to not 'push' on anything. This meant temporarily abandoning most of my goals and plans heading into this year. I've had some uncomfortable conversations where I was forced to acknowledge that my aims were still just talk.
 
-Two things have really helped: I started going to see a pair of lovely trainers at a gym four times a week, and started to chat to a good counsellor. Working out consistently has been fabulous aid, for it has made me feel the strongest I ever have, and forced me to do basic human things. Plus downsizing my pants by three waist sizes felt great!
+Two things have really helped: I started going to see a pair of great trainers at a gym four times a week, and started to chat to a good counsellor. Working out consistently has been fabulous aid, for it has made me feel the strongest I ever have, and forced me to do basic human things. Plus downsizing my pants by three waist sizes felt great!
 
 I'm happy to report that I'm starting to get a firmer handle on it all, and my plans for the future are opening up again. Soon I'll be able to take what I've just been talking about and put it into action. 
 
@@ -25,7 +25,7 @@ A huge thank you goes to my parents for supporting me through all of this. I wou
 
 ___
 
-So where was I last year?
+So where was I this year? What did I do?
 
 I was finishing up my fourth and final coop term at a fintech company here in Vancouver, after going backpacking in Asia for a few months. I had one term left for school with an expected graduation in May with many of my good friends.
 
@@ -42,12 +42,12 @@ I managed to do most of my work on my laptop in a hammock beside the beach. I re
 
 {{< figure src="/images/xmas/2018/hammocking.jpg" alt="Hammocking at Jericho" class="image" >}}
 
-In may, as an after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather, and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
+In May, as an after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather, and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
 
 {{< figure src="/images/xmas/2018/wct.jpg" alt="West Coast Trail hiking Group" class="image" >}}
 {{< figure src="/images/xmas/2018/wct.gif" alt="gif of Crystal falling in mud" class="gif" >}}
 
-Then newly employed Crystal decided to get a dog, and lovely Stella entered our lives!
+Then later that month the newly employed Crystal decided to get a dog, and lovely Stella entered our lives!
 
 {{< figure src="/images/xmas/2018/stella_famjam.jpg" alt="Crystal, Stella, and my adoption photo" class="image" >}}
 
@@ -57,30 +57,39 @@ The fur and dirty paw prints have been a bit to get used to, but she has without
 
 If you haven't yet, I would highly suggest you follow her instagram [@gsdstells](https://instagram.com/gsdstells). Its run by Crystal, but I manaage to sneak on there occasionally.
 
-Dirtfish
-
+The following month my dad and I went just outside Seattle to do [Dirtfish](https://dirtfish.com), a rally car driving school. There we got to spin around corners, learn to work the brakes and the car's motion to dance the rear of the car around corners. Plus some other tomfoolery like handbrake turns and time trials. The excuse is to learn handling in adverse conditions so we don't kill ourselves one day in my dad's cobra.
 
 This fall I also met a fabulous new person. While its too early to say much more, dating Viviana has been pretty fantastic, and I'm quite excited about where things are going. 
 
+{{< figure src="/images/xmas/2018/viv_and_me.jpg" alt="Viviana and I at Van Dusen lights" class="image" >}}
+
+We ended up taking two road trips back to back: out to Tofino, and then across the face of the province to Jasper/Banff. It wasn't planned to take such a long trip together so soon, but it just worked out that way. And it worked out well. 
+
+{{< figure src="/images/xmas/2018/viv_beach_profile.jpg" alt="Viviana on Chesterman Beach at Sunset" class="image" >}}
+
+In Tofino we went for long walks on the expansive beaches, took surfing lessons in the white shore sruf, and spent a day sea kayaking up the inlet within Meares Island. 
+
+The drive from Vancouver to Jasper was incredible. The golden larches were in their full fall glory, shifting into a georgous kalidoscope of colour. When combined with other changing foliage, the hillsides were a splendid firely mix of all shades between green and brown.
+
+Jasper is famous for a good reason: the drive down Jasper's parkways was literally breathtaking. Every so often we would look out, blink a few times in disbelief, and look out again. So many sharp peaks stretching up into the sky, cradeling the valley. Incredible.
+
+The first evening we camped in my little Hubba Hubba tent in the Icefield Centre campground. On the coast, it was still firmly shoulder camping season; a three season tent and sleeping setup was plenty. However when we pulled into our campsite, snow was lightly falling, and the temperature rapidly dropped below zero. I had seriously underestimated the conditions, and we were very very cold that night. Our plans of going hiking for two days in the area turned into a sprint for the hot springs farther south. The next three days were hot spring after hot spring after hot spring. Banff was overcrowded and tiny but a welcome relief, Radium was spacious but aritficial. The best was [a natural hot spring near Invermere]() as shown to us by Viv's friend from the area. Depending on the pool, you could pick your temperature depending on how much river water was mixing with the boiling spring.
+
 {{< figure src="/images/xmas/2018/viv_hotsprings.jpg" alt="Viviana and I in the __ hotsprings near Invermere" class="image" >}}
 
-We ended up taking two wonderful road trips back to back: out to Tofino, and then across the face of the province to Jasper/Banff.
-
-Tofino
-
-drive trees fall
-
-Breathtaking Jasper & nearly freezing to death to hot springing
-
-I even graduated for real! 
+I even graduated for real! At the end of November I put on the cap and gown and got a piece of paper. There was even a nice lunch a few days later.
 
 {{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="image" >}}
+
+Having actually graduated, I'm just starting my job search. 
+
+Now its the Christmas season and the year is drawing to a close. In spite of the difficulties throughout the year, I would say this has been a good year.
 
 ____
 
 Next year I plan to:
 
-* Finish my job search, ideally landing a remote Go/Ruby based backend software developer role.
+* Finish my job search, ideally finding a well-fitting remote Go/Ruby based backend software developer role.
 * Get my drysuit certification and dive in BC
 * Hike the North Coast Trail and/or the Bowron Lakes circuit (due to messing up my graduation, I had to cancel these last may)
 * Ski tour a lot more, and learn to better read slopes and snow. Frankly getting out and getting home safely will satisfy this for me. A winter overnight would also be a bonus.
@@ -89,6 +98,6 @@ There are a vairety of smaller tech projects I'd like to do, people I'd like to 
 
 ____
 
-Happy holidays and best of luck in the new year to all of you,
+Happy holidays and best of luck in 2019. A new year always brings fresh opportunites and adventures.
 
 Graham
