--- a/content/holiday_letter/2018.md
+++ b/content/holiday_letter/2018.md
@@ -11,7 +11,7 @@ ____
 
 This has been a relatively tough year for me.
 
-For those of you who have seen the show, I felt a bit like BoJack Horseman: desponedent, depressed, self-destructive, and building bad habits. I realised I had a minor problem last November, but dragged my feet on doing anything until March/April-ish of this year.
+Starting this year, I felt a bit like BoJack Horseman: desponedent, depressed, and building bad habits. I realised I had a problem last November, but dragged my feet on doing anything until March/April-ish of this year.
 
 Since then I've done my best to try to give myself space and time to figure out what is wrong, how to manage it, and how to continue on smoothly; how to be better. 
 
@@ -19,7 +19,7 @@ One key component is that I've tried to not 'push' on anything. This meant tempo
 
 Two things have really helped: I started going to see a pair of great trainers at a gym four times a week, and started to chat to a good counsellor. Working out consistently has been fabulous aid, for it has made me feel the strongest I ever have, and forced me to do basic human things. Plus downsizing my pants by three waist sizes felt great!
 
-I'm happy to report that I'm starting to get a firmer handle on it all, and my plans for the future are opening up again. Soon I'll be able to take what I've just been talking about and put it into action. 
+I'm happy to report that I'm getting a much firmer handle on it all, and my plans for the future are opening up again. Soon I'll be able to take what I've just been talking about and put it into action. 
 
 A huge thank you goes to my parents for supporting me through all of this. I would not be able to do any of this without them providing the opportunity to have time and space to work through things.
 
@@ -27,22 +27,22 @@ ___
 
 So where was I this year? What did I do?
 
-I was finishing up my fourth and final coop term at a fintech company here in Vancouver, after going backpacking in Asia for a few months. I had one term left for school with an expected graduation in May with many of my good friends.
+At the end of 2017 I was finishing up my fourth and final coop term at a fintech company here in Vancouver, after going backpacking in Asia for a few months. I had one term left for school with an expected graduation in May with many of my good friends.
 
 {{< figure src="/images/xmas/2018/asia0.jpg" alt="bike/japan" class="image" >}}
 {{< figure src="/images/xmas/2018/asia1.jpg" alt="diving" class="image" >}}
 
-Over spring break, as a getaway from school, I had the opportunity to go visit Jeff and Sue in New York! I spent the entire time chatting with friends over drinks, brunching away, or drinking afternoon tea in a speakeasy. I still don't know what Times Square is like , or been to the Statue of Liberty, but I felt my time was well spent. I felt strangely out of place with my shaggy hair and west coast casual dress. It got to me so much I even got a haircut four days in.
+Over spring break I had the opportunity to go visit Jeff and Sue in New York! I spent the entire time chatting with friends over drinks, brunching away, or drinking afternoon tea in a speakeasy. I still don't know what Times Square is like, or been to the Statue of Liberty, but I felt my time was well spent. I felt strangely out of place with my shaggy hair and west coast casual dress. It got to me so much I even got a haircut four days in.
 
 {{< figure src="/images/xmas/2018/ny.jpg" alt="" class="image" >}}
 
-I was stupidly overconfident and didn't both to check my credits for graduation and managed to miss the mark by two credits. To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (super chill and interesting). If I could recommend one film, it would be [Tampopo](https://imdb.com). An exercise I enjoyed was coming up with alternate taglines for the films. For Tampopo, it was Rocky for Ramen. Its also been called a Ramen Western.
+I was stupidly overconfident and didn't bother to check my credits for graduation and managed to miss the mark by two credits. I got the most terrifying email of my life with subject of "Application for Graduation: Denied". To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (very relaxing and interesting). If I could recommend one film, it would be [Tanpopo](https://imdb.com). An exercise I enjoyed was coming up with alternate taglines for the films. For Tanpopo, it was 'Rocky for Ramen'. Others have also called it a 'Ramen Western'.
 
-I managed to do most of my work on my laptop in a hammock beside the beach. I really could get used to that...
+That summer I managed to do most of my work on my laptop in a hammock beside the beach. The change of place with gentle summer breezes was peaceful and productive.
 
 {{< figure src="/images/xmas/2018/hammocking.jpg" alt="Hammocking at Jericho" class="image" >}}
 
-In May, as an after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather, and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
+In May, as a planned after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
 
 {{< figure src="/images/xmas/2018/wct.jpg" alt="West Coast Trail hiking Group" class="image" >}}
 {{< figure src="/images/xmas/2018/wct.gif" alt="gif of Crystal falling in mud" class="gif" >}}
@@ -57,7 +57,7 @@ The fur and dirty paw prints have been a bit to get used to, but she has without
 
 If you haven't yet, I would highly suggest you follow her instagram [@gsdstells](https://instagram.com/gsdstells). Its run by Crystal, but I manaage to sneak on there occasionally.
 
-The following month my dad and I went just outside Seattle to do [Dirtfish](https://dirtfish.com), a rally car driving school. There we got to spin around corners, learn to work the brakes and the car's motion to dance the rear of the car around corners. Plus some other tomfoolery like handbrake turns and time trials. The excuse is to learn handling in adverse conditions so we don't kill ourselves one day in my dad's cobra.
+The following month my dad and I went just outside Seattle to do [Dirtfish](https://dirtfish.com), a rally car driving school. There we learned to work the brakes and the car's momentum to dance the rear of the car around corners. Plus some other tomfoolery like handbrake turns and time trials. The excuse is to learn handling in adverse conditions so we don't kill ourselves one day in my dad's cobra.
 
 This fall I also met a fabulous new person. While its too early to say much more, dating Viviana has been pretty fantastic, and I'm quite excited about where things are going. 
 
@@ -67,21 +67,21 @@ We ended up taking two road trips back to back: out to Tofino, and then across t
 
 {{< figure src="/images/xmas/2018/viv_beach_profile.jpg" alt="Viviana on Chesterman Beach at Sunset" class="image" >}}
 
-In Tofino we went for long walks on the expansive beaches, took surfing lessons in the white shore sruf, and spent a day sea kayaking up the inlet within Meares Island. 
+In Tofino we went for long walks on the expansive beaches, took surfing lessons in the white shore sruf, and spent a day sea kayaking up the inlet within Meares Island. With clear skies and nothing but the expanse of the Pacific before us, many sunrises and sunsets were had.
 
-The drive from Vancouver to Jasper was incredible. The golden larches were in their full fall glory, shifting into a georgous kalidoscope of colour. When combined with other changing foliage, the hillsides were a splendid firely mix of all shades between green and brown.
+The drive from Vancouver to Jasper was incredible. The golden larches were in their full fall glory, shifting into a georgous kalidoscope of colour. When combined with other changing foliage, the hillsides were a firely mix of all shades between yellow and brown.
 
-Jasper is famous for a good reason: the drive down Jasper's parkways was literally breathtaking. Every so often we would look out, blink a few times in disbelief, and look out again. So many sharp peaks stretching up into the sky, cradeling the valley. Incredible.
+Jasper is famous for a good reason: the drive down Jasper's icefield parkway was literally breathtaking. Every so often we would look out, blink a few times in disbelief, and look out again. So many sharp peaks stretching up into the sky, cradeling the valley. Incredible.
 
 The first evening we camped in my little Hubba Hubba tent in the Icefield Centre campground. On the coast, it was still firmly shoulder camping season; a three season tent and sleeping setup was plenty. However when we pulled into our campsite, snow was lightly falling, and the temperature rapidly dropped below zero. I had seriously underestimated the conditions, and we were very very cold that night. Our plans of going hiking for two days in the area turned into a sprint for the hot springs farther south. The next three days were hot spring after hot spring after hot spring. Banff was overcrowded and tiny but a welcome relief, Radium was spacious but aritficial. The best was [a natural hot spring near Invermere]() as shown to us by Viv's friend from the area. Depending on the pool, you could pick your temperature depending on how much river water was mixing with the boiling spring.
 
 {{< figure src="/images/xmas/2018/viv_hotsprings.jpg" alt="Viviana and I in the __ hotsprings near Invermere" class="image" >}}
 
-I even graduated for real! At the end of November I put on the cap and gown and got a piece of paper. There was even a nice lunch a few days later.
+I even graduated for real! At the end of November I put on a cap and gown and got a piece of paper. There was even a nice lunch a few days later.
 
 {{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="image" >}}
 
-Having actually graduated, I'm just starting my job search. 
+Having actually graduated, I'm just starting my job search. Nothing to report yet, but I'm optimistic.
 
 Now its the Christmas season and the year is drawing to a close. In spite of the difficulties throughout the year, I would say this has been a good year.
 
@@ -91,13 +91,15 @@ Next year I plan to:
 
 * Finish my job search, ideally finding a well-fitting remote Go/Ruby based backend software developer role.
 * Get my drysuit certification and dive in BC
-* Hike the North Coast Trail and/or the Bowron Lakes circuit (due to messing up my graduation, I had to cancel these last may)
-* Ski tour a lot more, and learn to better read slopes and snow. Frankly getting out and getting home safely will satisfy this for me. A winter overnight would also be a bonus.
+* Hike the North Coast Trail and/or the Bowron Lakes circuit (due to messing up my graduation, I had to cancel these last May)
+* Ski tour a lot more, and learn to better read slopes and snow. Frankly getting out and getting home safely will satisfy this for me. A winter overnight would be a bonus.
 
-There are a vairety of smaller tech projects I'd like to do, people I'd like to visit, and places I'd like to go. However those come in their own time.
+There are a variety of smaller tech projects I'd like to do, people I'd like to visit, and places I'd like to go. However those have a flexibly time frame; they will come in their own time. 
 
 ____
 
 Happy holidays and best of luck in 2019. A new year always brings fresh opportunites and adventures.
+
+Yours,
 
 Graham
