--- a/content/holiday_letter/2018.md
+++ b/content/holiday_letter/2018.md
@@ -44,8 +44,9 @@ That summer I managed to do most of my work on my laptop in a hammock beside the
 
 In May, as a planned after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
 
-{{< figure src="/images/xmas/2018/wct.jpg" alt="West Coast Trail hiking Group" class="image" >}}
+{{< figure src="/images/xmas/2018/wct0.jpg" alt="West Coast Trail hiking Group" class="image" >}}
 {{< figure src="/images/xmas/2018/wct.gif" alt="gif of Crystal falling in mud" class="gif" >}}
+{{< figure src="/images/xmas/2018/wct1.jpg" alt="Crystal far in the distance on the beach" class="image" >}}
 
 Then later that month the newly employed Crystal decided to get a dog, and lovely Stella entered our lives!
 
@@ -53,7 +54,9 @@ Then later that month the newly employed Crystal decided to get a dog, and lovel
 
 The fur and dirty paw prints have been a bit to get used to, but she has without a doubt made my life better. She is a warm loving companion and wonderful to have around (especially if you keep feeding her hotdogs). She also is becoming quite the adventure dog, going on many hikes and trips, and recently ski adventures.
 
-{{< figure src="/images/xmas/2018/stella_hiking.jpg" alt="Stella high up on Tricouni" class="image" >}}
+{{< figure src="/images/xmas/2018/stella_hiking0.jpg" alt="Stella high up on Tricouni" class="image" >}}
+{{< figure src="/images/xmas/2018/stella_hiking1.jpg" alt="Stella high up on Cheam" class="image" >}}
+{{< figure src="/images/xmas/2018/stella_skiing.jpg" alt="Stella on our first ski trip of the year in Manning Park" class="image" >}}
 
 If you haven't yet, I would highly suggest you follow her instagram [@gsdstells](https://instagram.com/gsdstells). Its run by Crystal, but I manaage to sneak on there occasionally.
 
@@ -67,11 +70,15 @@ We ended up taking two road trips back to back: out to Tofino, and then across t
 
 {{< figure src="/images/xmas/2018/viv_beach_profile.jpg" alt="Viviana on Chesterman Beach at Sunset" class="image" >}}
 
-In Tofino we went for long walks on the expansive beaches, took surfing lessons in the white shore sruf, and spent a day sea kayaking up the inlet within Meares Island. With clear skies and nothing but the expanse of the Pacific before us, many sunrises and sunsets were had.
+In Tofino we went for long walks on the expansive beaches, took surfing lessons in the white shore sruf, and spent a day sea kayaking up Clayoquot Sound. With clear skies and nothing but the expanse of the Pacific before us, many sunrises and sunsets were had.
+
+{{< figure src="/images/xmas/2018/viv_of_the_trees.jpg" alt="Viv in Cathedral Grove" class="image" >}}
 
 The drive from Vancouver to Jasper was incredible. The golden larches were in their full fall glory, shifting into a georgous kalidoscope of colour. When combined with other changing foliage, the hillsides were a firely mix of all shades between yellow and brown.
 
 Jasper is famous for a good reason: the drive down Jasper's icefield parkway was literally breathtaking. Every so often we would look out, blink a few times in disbelief, and look out again. So many sharp peaks stretching up into the sky, cradeling the valley. Incredible.
+
+{{< figure src="/images/xmas/2018/jasper_pointing.jpg" alt="" class="image" >}}
 
 The first evening we camped in my little Hubba Hubba tent in the Icefield Centre campground. On the coast, it was still firmly shoulder camping season; a three season tent and sleeping setup was plenty. However when we pulled into our campsite, snow was lightly falling, and the temperature rapidly dropped below zero. I had seriously underestimated the conditions, and we were very very cold that night. Our plans of going hiking for two days in the area turned into a sprint for the hot springs farther south. The next three days were hot spring after hot spring after hot spring. Banff was overcrowded and tiny but a welcome relief, Radium was spacious but aritficial. The best was [a natural hot spring near Invermere]() as shown to us by Viv's friend from the area. Depending on the pool, you could pick your temperature depending on how much river water was mixing with the boiling spring.
 
@@ -80,10 +87,18 @@ The first evening we camped in my little Hubba Hubba tent in the Icefield Centre
 I even graduated for real! At the end of November I put on a cap and gown and got a piece of paper. There was even a nice lunch a few days later.
 
 {{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="image" >}}
+{{< figure src="/images/xmas/2018/graduation_me.jpg" alt="The me right before my graduation ceremony" class="image" >}}
 
 Having actually graduated, I'm just starting my job search. Nothing to report yet, but I'm optimistic.
 
 Now its the Christmas season and the year is drawing to a close. In spite of the difficulties throughout the year, I would say this has been a good year.
+
+{{< figure src="/images/xmas/2018/stella_famjam_santa.jpg" alt="Crystal, Stella, Santa, the Grinch, and I get a nice shot together" class="image" >}}
+
+
+{{< figure src="/images/xmas/2018/grotto_haircut.jpg" alt="A grotto haircut" class="image" >}}
+{{< figure src="/images/xmas/2018/.jpg" alt="" class="image" >}}
+{{< figure src="/images/xmas/2018/.jpg" alt="" class="image" >}}
 
 ____
 
