--- a/content/holiday_letter/2018.md
+++ b/content/holiday_letter/2018.md
@@ -17,7 +17,7 @@ Since then I've done my best to try to give myself space and time to figure out 
 
 One key component is that I've tried to not 'push' on anything. This meant temporarily abandoning most of my goals and plans heading into this year. I've had some uncomfortable conversations where I was forced to acknowledge that my aims were still just talk.
 
-Two things have really helped: I started going to see a pair of great trainers at a gym four times a week, and started to chat to a good counsellor. Working out consistently has been fabulous aid, for it has made me feel the strongest I ever have, and forced me to do basic human things. Plus downsizing my pants by three waist sizes felt great!
+Two things have really helped: I started going to see a pair of great trainers at a gym four times a week, and started to chat to a good counsellor. Working out consistently has been fabulous aid, for it made me the strongest I have ever been, and forced me to do basic human things. Plus downsizing my pants by three waist sizes felt great!
 
 I'm happy to report that I'm getting a much firmer handle on it all, and my plans for the future are opening up again. Soon I'll be able to take what I've just been talking about and put it into action. 
 
@@ -36,7 +36,7 @@ Over spring break I had the opportunity to go visit Jeff and Sue in New York! I 
 
 {{< figure src="/images/xmas/2018/ny.jpg" alt="" class="image" >}}
 
-I was stupidly overconfident and didn't bother to check my credits for graduation and managed to miss the mark by two credits. I got the most terrifying email of my life with subject of "Application for Graduation: Denied". To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (very relaxing and interesting). If I could recommend one film, it would be [Tanpopo](https://imdb.com). An exercise I enjoyed was coming up with alternate taglines for the films. For Tanpopo, it was 'Rocky for Ramen'. Others have also called it a 'Ramen Western'.
+I was stupidly overconfident and didn't bother to check my credits for graduation and managed to miss the mark by two credits. I got the most terrifying email of my life with subject of "Application for Graduation: Denied". To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (very relaxing and interesting). If I could recommend one film, it would be [Tanpopo](https://www.imdb.com/title/tt0092048/). An exercise I enjoyed was coming up with alternate taglines for the films. For Tanpopo, it was 'Rocky for Ramen'. Others have also called it a 'Ramen Western'.
 
 That summer I managed to do most of my work on my laptop in a hammock beside the beach. The change of place with gentle summer breezes was peaceful and productive.
 
