--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -29,69 +29,68 @@ At the end of 2017 I was finishing up my fourth and final coop term at a fintech
 
 Over spring break I had the opportunity to go visit Jeff and Sue in New York! I spent the entire time chatting with friends over drinks, brunching away, or drinking afternoon tea in a speakeasy. I still don't know what Times Square is like, or been to the Statue of Liberty, but I felt my time was well spent. I felt strangely out of place with my shaggy hair and west coast casual dress. It got to me so much I even got a haircut four days in.
 
-I was stupidly overconfident and didn't bother to check my credits for graduation and managed to miss the mark by two credits. I got the most terrifying email of my life with subject of "Application for Graduation: Denied". To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (very relaxing and interesting). If I could recommend one film, it would be [Tanpopo](https://www.imdb.com/title/tt0092048/). An exercise I enjoyed was coming up with alternate taglines for the films. For Tanpopo, it was 'Rocky for Ramen'. Others have also called it a 'Ramen Western'. I managed to do most of my work on my laptop in a hammock beside the beach. The change of place with gentle summer breezes was peaceful and productive.
+I was stupidly overconfident and didn't bother to check my credits for graduation and managed to miss the mark by two credits. I got the most terrifying email of my life with subject of "Application for Graduation: Denied". To finish up I took two classes over the summer: English Technical Writing (somewhat useful, remote, but boring) and Introduction to Japanese Cinema (very relaxing and interesting). If I could recommend one film, it would be [Tampopo](https://www.imdb.com/title/tt0092048/). An exercise I enjoyed was coming up with alternate taglines for the films. For Tampopo, it was 'Rocky for Ramen'. Others have also called it a 'Ramen Western'. I managed to do most of my work on my laptop in a hammock beside the beach. The change of place with gentle summer breezes was peaceful and productive.
 
-{{< figure src="/images/xmas/2018/hammocking.jpg" alt="Hammocking at Jericho" class="image" >}}
+{{< figure src="/images/xmas/2018/hammocking.jpg" alt="Hammocking at Jericho" class="xmas_image" >}}
 
 In May, as a planned after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
 
-{{< figure src="/images/xmas/2018/wct0.jpg" alt="West Coast Trail hiking Group" class="image" >}}
+{{< figure src="/images/xmas/2018/wct0.jpg" alt="West Coast Trail hiking Group" class="xmas_image" >}}
 {{< figure src="/images/xmas/2018/wct.mp4" alt="Crystal falling in mud" class="gif" >}}
-{{< figure src="/images/xmas/2018/wct1.jpg" alt="Crystal far in the distance on the beach" class="image" >}}
+{{< figure src="/images/xmas/2018/wct1.jpg" alt="Crystal far in the distance on the beach" class="xmas_image" >}}
 
 Then later that month the newly employed Crystal decided to get a dog, and lovely Stella entered our lives!
 
-{{< figure src="/images/xmas/2018/stella_famjam.jpg" alt="Crystal, Stella, and my adoption photo" class="image" >}}
+{{< figure src="/images/xmas/2018/stella_famjam.jpg" alt="Crystal, Stella, and my adoption photo" class="xmas_image" >}}
 
 The fur and dirty paw prints have been a bit to get used to, but she has without a doubt made my life better. She is a warm loving companion and wonderful to have around (especially if you keep feeding her hotdogs). She also is becoming quite the adventure dog, going on many hikes and trips, and recently ski adventures.
 
-{{< figure src="/images/xmas/2018/stella_hiking0.jpg" alt="Stella high up on Tricouni" class="image" >}}
-{{< figure src="/images/xmas/2018/stella_hiking1.jpg" alt="Stella high up on Cheam" class="image" >}}
-{{< figure src="/images/xmas/2018/stella_skiing.jpg" alt="Stella on our first ski trip of the year in Manning Park" class="image" >}}
+{{< figure src="/images/xmas/2018/stella_hiking0.jpg" alt="Stella high up on Cheam" class="xmas_image" >}}
+{{< figure src="/images/xmas/2018/stella_hiking1.jpg" alt="Stella high up on Tricouni" class="xmas_image" >}}
+{{< figure src="/images/xmas/2018/stella_skiing.jpg" alt="Stella on our first ski trip of the year in Manning Park" class="xmas_image" >}}
 
 If you haven't yet, I would highly suggest you follow her Instagram [@gsdstells](https://instagram.com/gsdstells). Its run by Crystal, but I manage to sneak on there occasionally.
 
 The following month my dad and I went just outside Seattle to do [Dirtfish](https://dirtfish.com), a rally car driving school. There we learned to work the brakes and the car's momentum to dance the rear of the car around corners. Plus some other tomfoolery like handbrake turns and time trials. The excuse is to learn handling in adverse conditions so we don't kill ourselves one day in my dad's cobra.
 
-{{< figure src="/images/xmas/2018/dirtfish.jpg" alt="My dad and I at the end of Dirtfish" class="image" >}}
+{{< figure src="/images/xmas/2018/dirtfish.jpg" alt="My dad and I at the end of Dirtfish" class="xmas_image" >}}
 
 This fall I also met a fabulous new person. While its too early to say much more, dating Viviana has been pretty fantastic, and I'm quite excited about where things are going. 
 
-{{< figure src="/images/xmas/2018/viv_and_me.jpg" alt="Viviana and I at Van Dusen lights" class="image" >}}
+{{< figure src="/images/xmas/2018/viv_and_me.jpg" alt="Viviana and I at Van Dusen lights" class="xmas_image" >}}
 
 We ended up taking two road trips back to back: out to Tofino, and then across the face of the province to Jasper/Banff. It wasn't planned to take such a long trip together so soon, but it just worked out that way. And it worked out well. 
 
-{{< figure src="/images/xmas/2018/viv_beach_profile.jpg" alt="Viviana on Chesterman Beach at Sunset" class="image" >}}
+{{< figure src="/images/xmas/2018/viv_beach_profile.jpg" alt="Viviana on Chesterman Beach at Sunset" class="xmas_image" >}}
 
 In Tofino we went for long walks on the expansive beaches, took surfing lessons in the white shore surf, and spent a day sea kayaking up Clayoquot Sound. With clear skies and nothing but the expanse of the Pacific before us, many sunrises and sunsets were had.
 
-{{< figure src="/images/xmas/2018/viv_of_the_trees.jpg" alt="Viv in Cathedral Grove" class="image" >}}
+{{< figure src="/images/xmas/2018/viv_of_the_trees.jpg" alt="Viv in Cathedral Grove" class="xmas_image" >}}
 
 The drive from Vancouver to Jasper was incredible. The golden larches were in their full fall glory, shifting into a gorgeous kaleidoscope of colour. When combined with other changing foliage, the hillsides were a fiery mix of all shades between yellow and brown.
 
 Jasper is famous for a good reason: the drive down Jasper's icefield parkway was literally breathtaking. Every so often we would look out, blink a few times in disbelief, and look out again. So many sharp peaks stretching up into the sky, cradling the valley. Incredible.
 
-{{< figure src="/images/xmas/2018/jasper_pointing.jpg" alt="" class="image" >}}
+{{< figure src="/images/xmas/2018/jasper_pointing.jpg" alt="" class="xmas_image" >}}
 
 The first evening we camped in my little Hubba Hubba tent in the Icefield Centre campground. On the coast, it was still firmly shoulder camping season; a three season tent and sleeping setup was plenty. However when we pulled into our campsite, snow was lightly falling, and the temperature rapidly dropped below zero. I had seriously underestimated the conditions, and we were very very cold that night. Our plans of going hiking for two days in the area turned into a sprint for the hot springs farther south. The next three days were hot spring after hot spring after hot spring. Banff was overcrowded and tiny but a welcome relief, Radium was spacious but artificial. The best was [a natural hot spring near Invermere]() as shown to us by Viv's friend from the area. Depending on the pool, you could pick your temperature depending on how much river water was mixing with the boiling spring.
 
-{{< figure src="/images/xmas/2018/viv_hotsprings.jpg" alt="Viviana and I in the __ hotsprings near Invermere" class="image" >}}
+{{< figure src="/images/xmas/2018/viv_hotsprings.jpg" alt="Viviana and I in the __ hotsprings near Invermere" class="xmas_image" >}}
 
 I even graduated for real! At the end of November I put on a cap and gown and got a piece of paper. There was even a nice lunch a few days later.
 
-{{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="image" >}}
-{{< figure src="/images/xmas/2018/graduation_me.jpg" alt="The me right before my graduation ceremony" class="image" >}}
+{{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="xmas_image" >}}
+{{< figure src="/images/xmas/2018/graduation_me.jpg" alt="The me right before my graduation ceremony" class="xmas_image" >}}
 
 Having actually graduated, I'm just starting my job search. Nothing to report yet, but I'm optimistic.
 
 Now its the Christmas season and the year is drawing to a close. In spite of the difficulties throughout the year, I would say this has been a good year.
 
-{{< figure src="/images/xmas/2018/stella_santa_famjam.jpg" alt="Crystal, Stella, Santa, the Grinch, and I get a nice shot together" class="image" >}}
+{{< figure src="/images/xmas/2018/stella_santa_famjam.jpg" alt="Crystal, Stella, Santa, the Grinch, and I get a nice shot together" class="xmas_image" >}}
 
 
-{{< figure src="/images/xmas/2018/grotto_haircut.jpg" alt="A grotto haircut" class="image" >}}
-{{< figure src="/images/xmas/2018/skiing_reindeer_impression.jpg" alt="" class="image" >}}
-{{< figure src="/images/xmas/2018/.jpg" alt="" class="image" >}}
+{{< figure src="/images/xmas/2018/grotto_haircut.jpg" alt="A grotto haircut" class="xmas_image" >}}
+{{< figure src="/images/xmas/2018/skiing_reindeer_impression.jpg" alt="" class="xmas_image" >}}
 
 ____
 
@@ -112,4 +111,4 @@ Yours,
 
 Graham
 
-{{< figure src="/images/xmas/2018/me_final.jpg" alt="" class="image" >}}
+{{< figure src="/images/xmas/2018/me_final.jpg" alt="" class="xmas_image" >}}
