--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -36,7 +36,7 @@ I was stupidly overconfident and didn't bother to check my credits for graduatio
 In May, as a planned after grad celebration, Crystal, Radu, and Marina and I did the West Coast Trail together! We got incredibly lucky with the weather and were treated to seven days of sun, sand, and deep deep mud. Frankly one of the best hiking trips I have ever been on. It makes me excited for the North Coast Trail next year!
 
 {{< figure src="/images/xmas/2018/wct0.jpg" alt="West Coast Trail hiking Group" class="xmas_image" >}}
-{{< figure src="/images/xmas/2018/wct.mp4" alt="Crystal falling in mud" class="gif" >}}
+<video autoplay loop muted playsinline><source src="/videos/xmas/2018/wct.mp4" type="video/mp4"></video>
 {{< figure src="/images/xmas/2018/wct1.jpg" alt="Crystal far in the distance on the beach" class="xmas_image" >}}
 
 Then later that month the newly employed Crystal decided to get a dog, and lovely Stella entered our lives!
