Added a graduation photo

--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -73,14 +73,14 @@ Jasper is famous for a good reason: the drive down Jasper's icefield parkway was
 
 {{< figure src="/images/xmas/2018/jasper_pointing.jpg" alt="" class="xmas_image" >}}
 
-The first evening we camped in my little Hubba Hubba tent in the Icefield Centre campground. On the coast, it was still firmly shoulder camping season; a three season tent and sleeping setup was plenty. However when we pulled into our campsite, snow was lightly falling, and the temperature rapidly dropped below zero. I had seriously underestimated the conditions, and we were very very cold that night. Our plans of going hiking for two days in the area turned into a sprint for the hot springs farther south. The next three days were hot spring after hot spring after hot spring. Banff was overcrowded and tiny but a welcome relief, Radium was spacious but artificial. The best was [a natural hot spring near Invermere]() as shown to us by Viv's friend from the area. Depending on the pool, you could pick your temperature depending on how much river water was mixing with the boiling spring.
+The first evening we camped in my little Hubba Hubba tent in the Icefield Centre campground. On the coast, it was still firmly shoulder camping season; a three season tent and sleeping setup was plenty. However when we pulled into our campsite, snow was lightly falling, and the temperature rapidly dropped below zero. I had seriously underestimated the conditions, and we were very very cold that night. Our plans of going hiking for two days in the area turned into a sprint for the hot springs farther south. The next three days were hot spring after hot spring after hot spring. Banff was overcrowded and tiny but a welcome relief, Radium was spacious but artificial. The best was [a natural hot spring near Invermere](https://goo.gl/maps/dq58ZzDfQDs) as shown to us by Viv's friend from the area. Depending on the pool, you could pick your temperature depending on how much river water was mixing with the boiling spring.
 
 {{< figure src="/images/xmas/2018/viv_hotsprings.jpg" alt="Viviana and I in the __ hotsprings near Invermere" class="xmas_image" >}}
 
 I even graduated for real! At the end of November I put on a cap and gown and got a piece of paper. There was even a nice lunch a few days later.
 
 {{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="xmas_image" >}}
-{{< figure src="/images/xmas/2018/graduation_me.jpg" alt="The me right before my graduation ceremony" class="xmas_image" >}}
+{{< figure src="/images/xmas/2018/graduation_me.jpg" alt="Me right before my graduation ceremony" class="xmas_image" >}}
 
 Having actually graduated, I'm just starting my job search. Nothing to report yet, but I'm optimistic.
 
