Updated fun photo copy

--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -88,6 +88,7 @@ Now its the Christmas season and the year is drawing to a close. In spite of the
 
 {{< figure src="/images/xmas/2018/stella_santa_famjam.jpg" alt="Crystal, Stella, Santa, the Grinch, and I get a nice shot together" class="xmas_image" >}}
 
+We have also managed to have some fun along the way, with the likes of a Grotto Haircut and our best reindeer impressions!
 
 {{< figure src="/images/xmas/2018/grotto_haircut.jpg" alt="A grotto haircut" class="xmas_image" >}}
 {{< figure src="/images/xmas/2018/skiing_reindeer_impression.jpg" alt="" class="xmas_image" >}}
