minor style changes

--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -82,7 +82,7 @@ I even graduated for real! At the end of November I put on a cap and gown and go
 {{< figure src="/images/xmas/2018/graduation_famjam.jpg" alt="The family right after my graduation ceremony" class="xmas_image" >}}
 {{< figure src="/images/xmas/2018/graduation_me.jpg" alt="Me right before my graduation ceremony" class="xmas_image" >}}
 
-Having actually graduated, I'm just starting my job search. Nothing to report yet, but I'm optimistic.
+I'm just starting my job search. Nothing to report yet, but I'm optimistic.
 
 Now its the Christmas season and the year is drawing to a close. In spite of the difficulties throughout the year, I would say this has been a good year.
 
