--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -1,7 +1,7 @@
 ---
 title: "Christmas Letter 2018: Talking"
 date: 2018-12-24T23:59:59-08:00
-draft: false
+draft: true
 ---
 
 Hi all, and happy holidays!
