--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -4,7 +4,9 @@ date: 2018-12-24T23:59:59-08:00
 draft: true
 ---
 
-Hi all, and happy holidays!
+Dear family and friends,
+
+Merry Christmas, Happy Holidays, and Happy New Year!
 
 After enjoying my Uncle Doug's yearly holiday letter, and seeing my friends and family get more spread out, I thought I'd give this a try. 
 ____
@@ -37,7 +39,12 @@ In May, as a planned after grad celebration, Crystal, Radu, and Marina and I did
 
 {{< figure src="/images/xmas/2018/wct0.jpg" alt="West Coast Trail hiking Group" class="xmas_image" >}}
 
-<video controls loop playsinline muted poster="images/xmas/2018/wct_mp4_cover.jpg"><source src="/videos/xmas/2018/wct.mp4" type="video/mp4"><p></p></video>
+<div class="xmas_image autoplay_desktop">
+<video autoplay loop playsinline muted poster="images/xmas/2018/wct_mp4_cover.jpg"><source src="/videos/xmas/2018/wct.mp4" type="video/mp4"><p></p></video>
+</div>
+<div class="xmas_image autoplay_mobile">
+<video autoplay loop playsinline muted poster="images/xmas/2018/wct_mp4_cover.jpg"><source src="/videos/xmas/2018/wct.mp4" type="video/mp4"><p></p></video>
+</div>
 {{< figure src="/images/xmas/2018/wct1.jpg" alt="Crystal far in the distance on the beach" class="xmas_image" >}}
 
 Then later that month the newly employed Crystal decided to get a dog, and lovely Stella entered our lives!
@@ -108,6 +115,8 @@ There are a variety of smaller tech projects I'd like to do, people I'd like to 
 ____
 
 Happy holidays and best of luck in 2019. A new year always brings fresh opportunities and adventures.
+
+I love hearing from all of you. Feel free to reach out at any time!
 
 Yours,
 
