--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -63,7 +63,7 @@ The following month my dad and I went just outside Seattle to do [Dirtfish](http
 
 {{< figure src="/images/xmas/2018/dirtfish.jpg" alt="My dad and I at the end of Dirtfish" class="xmas_image" >}}
 
-This fall I also met a fabulous new person. While its too early to say much more, dating Viviana has been pretty fantastic, and I'm quite excited about where things are going. 
+This fall I also met a fabulous new person. While its too early to say much more, dating Viviana has been pretty fantastic, and I'm quite excited about where things are going. She is an excellent adventure companion!
 
 {{< figure src="/images/xmas/2018/viv_and_me.jpg" alt="Viviana and I at Van Dusen lights" class="xmas_image" >}}
 
