Fixed type in next year

--- a/content/xmas/2018.md
+++ b/content/xmas/2018.md
@@ -110,7 +110,7 @@ Next year I plan to:
 * Hike the North Coast Trail and/or the Bowron Lakes circuit (due to messing up my graduation, I had to cancel these last May)
 * Ski tour a lot more, and learn to better read slopes and snow. Frankly getting out and getting home safely will satisfy this for me. A winter overnight would be a bonus.
 
-There are a variety of smaller tech projects I'd like to do, people I'd like to visit, and places I'd like to go. However those have a flexibly time frame; they will come in their own time. 
+There are a variety of smaller tech projects I'd like to do, people I'd like to visit, and places I'd like to go. However those have a flexible time frame; they will come in their own time. 
 
 ____
 
